socnet: добавил комментарии к интерфейсам, откорректировал зависимости

--- a/TaskTestAndMaven/socnet/communications/pom.xml
+++ b/TaskTestAndMaven/socnet/communications/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.jschool.socnet</groupId>
     <artifactId>communications</artifactId>
 
     <dependencies>
