--- a/TaskTestAndMaven/socnet/core/pom.xml
+++ b/TaskTestAndMaven/socnet/core/pom.xml
@@ -12,5 +12,17 @@
     <groupId>org.jschool.socnet</groupId>
     <artifactId>core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jschool.socnet</groupId>
+            <artifactId>communications</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jschool.socnet</groupId>
+            <artifactId>media</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
