--- a/TaskTestAndMaven/socnet/communications/pom.xml
+++ b/TaskTestAndMaven/socnet/communications/pom.xml
@@ -12,10 +12,11 @@
     <groupId>org.jschool.socnet</groupId>
     <artifactId>communications</artifactId>
 
+
     <dependencies>
         <dependency>
             <groupId>org.jschool.socnet</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>media</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
