--- a/TaskTestAndMaven/socnet/pom.xml
+++ b/TaskTestAndMaven/socnet/pom.xml
@@ -15,5 +15,18 @@
         <module>media</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
