--- a/TaskJMM/pom.xml
+++ b/TaskJMM/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jschool</groupId>
+            <artifactId>multitreading</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
