--- a/TaskDataBase/pom.xml
+++ b/TaskDataBase/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>cachablefibonachi</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <junit.version>4.13</junit.version>
     </properties>
@@ -19,6 +20,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
+                    <encoding>utf-8</encoding>
                     <source>8</source>
                     <target>8</target>
                 </configuration>
