--- a/TaskSpringJDBC/recipebook/pom.xml
+++ b/TaskSpringJDBC/recipebook/pom.xml
@@ -57,12 +57,12 @@
         </dependency>
 
 
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.h2database/h2 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.h2database</groupId>-->
-<!--            <artifactId>h2</artifactId>-->
-<!--            <version>1.4.200</version>-->
-<!--        </dependency>-->
+                <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>commons-io</groupId>-->
